# salah-app

./: .firebaserc  .gitattributes  .gitignore  BUILD_GUIDE.md  audit-report.md  capacitor.config.json  codemagic.yaml  index.html  manifest.json  native-bridge.js  package-lock.json  package.json  privacy.html  rakaat-counter.html  robots.txt  sitemap.xml  sw.js  tasmee-poc.html
android/: build.gradle  capacitor.settings.gradle  variables.gradle
android/app/: build.gradle  capacitor.build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.c
android/app/src/main/java/com/ddcbusiness/noor/: AudioRecorderPlugin.java  KeepAwakePlugin.java  MainActivity.java  ProximitySensorPlugin.java  SilentSpeechPlugin.java  WhisperNativePlugin.java
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
docs/: audit-report.docx  build-readiness-audit.md  generate_audit_docx.py  gguf-model-conversion.md  salah-vision-design.md  tasmee-diagnosis.md  tasmee-full-report.md  tasmee-system-map.md  tasmee-vosk-plan.md  tiny-model-conversion.md  vosk-quran-feasibility.md
ios/App/: Podfile
ios/App/App/: GoogleService-Info.plist  Info.plist
ios/App/App.xcodeproj/: project.pbxproj
mushaf/: pages.json
scripts/: bench-node.mjs  convert-gguf.ps1  download-model.sh  prepare-www.sh
